ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: local-ingress
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /serverone
        pathType: Prefix
        backend:
          service: 
            name: go-server-one-service
            port:
              number: 9091
      - path: /servertwo
        pathType: Prefix
        backend:
          service: 
            name: go-server-two-service
            port:
              number: 9092
